--- a/style.css
+++ b/style.css
@@ -1,13 +1,39 @@
+@font-face {
+  font-family: emoji;
+
+  /* Fonts for text outside emoji blocks */
+  src: local('Droid Sans Mono'),
+       local('Lucida Console'),
+       local('Arial Monospaced'),
+       local(Arial);
+}
+@font-face {
+  font-family: emoji;
+
+  src: local('Apple Color Emoji'),
+       local('Android Emoji'),
+       local('Segoe UI'),
+	   local('Segoe UI Symbol'),
+       local(EmojiSymbols),
+       local(Symbola)/*,
+       url('fonts/Symbola-Emoji.eot?#iefix') format('embedded-opentype'),
+       url('fonts/Symbola-Emoji.woff') format('woff'),
+       url('fonts/Symbola-Emoji.ttf') format('truetype')*/;
+
+  /* Emoji unicode blocks */
+  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
+}
+
 html,
 body {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     margin:0;
     padding:0;
     background-color: #ffffff;
 	color: #000000;
     overflow: hidden;
-    font-family: noto, ubuntu, helvetica, arial;
+    font-family: noto, ubuntu, Lucida Sans, Lucida Grande, Lucida Sans Unicode, HelveticaNeue-Light, HelveticaNeue, Helvetica, Arial, sans-serif, Segoe UI, 'Segoe UI Symbol', 'emoji';
 }
 
 @keyframes loading {
@@ -20,16 +46,14 @@ body {
   }
 }
 
-#logo{
+#loading{
     display: inline-block;
 	height: 21px;
 	width: auto;
-	position: relative;
-    top: 5px;
-    left: 1px;
+	image-rendering: optimizeQuality;
 }
 
-.loading  #logo, .page-loading #logo, .torrent-loading #logo{
+.loading  #loading, .page-loading #loading, .torrent-loading #loading{
 cursor: wait;
 cursor: progress;
 animation-direction: normal;
@@ -43,74 +67,4 @@ animation-name: loading;
 .loading  {
 cursor: wait;
 cursor: progress;
-}
-
-.tab header {
-height: 25px;
-font-size: 15px;
-font-weight: bold;
-color: #000000;
-border-bottom-color: #000000;
-border-bottom-width: 1px;
-border-bottom-style: solid;
-}
-
-.tab .favicon {
-
-}
-
-#nav {
-display: block;
-top: 0px;
-    height: 30px;
-    width: 100%;
-    //position:absolute;
-    z-index: 10;
-    opacity:1;
-    transition: opacity 500ms;
-	transition-property: opacity, background-color;
-	transition-duration: 500ms, 0.3s;
-	-webkit-app-region: drag;
-	border-bottom-color: #242930;
-    border-bottom-width: 1px;
-    border-bottom-style: dotted;
-	background-color: #242930;
-	color: #339cef;
-}
-
-#address {
-        width:calc(100% - 250px);
-		/*
-        font-size:30px;
-        line-height:40px;
-        border:none;
-        box-shadow: inset 0 0 3px rgba(0,0,0,.4);
-        margin:5px 5px 5px 10px;
-        padding: 0 3px;
-		*/
-		border: none;
-		box-shadow: inset 0 0 3px rgba(0,0,0,.4);
-		padding: 4px;
-		border-radius: 4px;
-}
-
-#browser {
-    border:none;
-    margin:0;
-    width:100%;
-    height:calc(100% - 55px);
-    position:absolute;
-    top: 55px;
-    opacity:1;
-    transition: opacity 500ms;
-	z-index: 9999;
-	background-color: #ffffff;
-}
-
-.hidden {
-    display:none;
-}
-
-#favicon {
-image-rendering: optimizeQuality;
 }
