--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 background-image: url('logo.png');
 background-image: url('logo.svg'), none;
 background-repeat: repeat;
-background-position: 0 0;
+background-position: center;
 background-size: cover;
 }
 
@@ -49,7 +49,7 @@ float: left;
 width: 100%;
 height: 100%;
 background-color: #ffffff;
-background-color: rgba(255, 255, 255, 0.75);
+background-color: rgba(255, 255, 255, 0.8);
 }
 
 @keyframes loading {
@@ -100,4 +100,64 @@ height: 50px;
     color: #ffffff;
     font-family: monospace;
     font-size: 15px;
+}
+
+.player,.download-link {
+display: block;
+clear: both;
+max-width: 100%;
+margin: 0 auto;
+}
+
+.button {
+border: 0;
+outline: 0;
+-webkit-appearance: none;
+-moz-appearance: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+cursor: pointer;
+vertical-align: middle;
+text-decoration: none;
+display: block;
+display: inline-block;
+position: relative;
+color: #ffffff;
+background-color: #262C32;
+background-color: rgba(38, 44, 50, 0.9);
+font-size: 80%;
+padding-left: 1em;
+padding-right: 1em;
+margin-top: 1px;
+margin-bottom: 1px;
+text-align: center;
+display: inline-block;
+min-height: 2.1em;
+max-width: 80%;
+height: auto;
+line-height: 2.125em;
+text-decoration: none;
+text-transform: uppercase;
+border-radius: 4px;
+background-repeat: repeat;
+box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+-webkit-transition-property: color, background-color, border, box-shadow, transform, opacity;
+transition-property: color, background-color, border, box-shadow, transform, opacity;
+-webkit-transition-duration: 300ms;
+transition-duration: 300ms;
+}
+
+.button:hover, .button:focus {
+color: #ffffff;
+border: 0;
+background-color: rgba(255, 255, 255, 0.3);
+box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.12), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 8px 17px 0 rgba(0, 0, 0, 0.2);
+}
+
+.button:active {
+background-color: rgba(255, 255, 255, 0.2);
+box-shadow: inset 0 2px 0 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.12);
 }
