--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ background-color: rgba(255, 255, 255, 0.8);
 	image-rendering: optimizeQuality;
 }
 
-.loading  #loading, .page-loading #loading, .torrent-loading #loading{
+.loading  #loading, .loading #logo{
 cursor: wait;
 cursor: progress;
 animation-direction: normal;
