--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     padding:0;
     background-color: #ffffff;
 	color: #000000;
-    overflow: hidden;
+    overflow: auto;
     font-family: noto, ubuntu, Lucida Sans, Lucida Grande, Lucida Sans Unicode, HelveticaNeue-Light, HelveticaNeue, Helvetica, Arial, sans-serif, Segoe UI, 'Segoe UI Symbol', 'emoji';
 	text-align: center;
 }
@@ -47,7 +47,8 @@ display: block;
 clear: both;
 float: left;
 width: 100%;
-height: 100%;
+min-height: 100%;
+height: auto;
 background-color: #ffffff;
 background-color: rgba(255, 255, 255, 0.8);
 }
@@ -151,13 +152,15 @@ transition-duration: 300ms;
 }
 
 .button:hover, .button:focus {
-color: #ffffff;
+color: #000000;
 border: 0;
-background-color: rgba(255, 255, 255, 0.3);
+background-color: #373F48;
+background-color: rgba(55, 63, 72, 0.9);
 box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.12), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 }
 
 .button:active {
-background-color: rgba(255, 255, 255, 0.2);
+background-color: #373F48;
+background-color: rgba(55, 63, 72, 0.9);
 box-shadow: inset 0 2px 0 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.12);
 }
