--- a/style.css
+++ b/style.css
@@ -92,15 +92,28 @@ height: 50px;
 }
 
 #player {
+  width: 100%;
     background-color: #BBFFFB;
+    background-color: rgba(187, 255, 251, 0.7);
     color: #000000;
 }
 
 #log {
+  width: 100%;
     background-color: #005D00;
+    background-color: rgba(0, 93, 0, 0.7);
     color: #ffffff;
     font-family: monospace;
     font-size: 15px;
+}
+
+#info {
+  width: 100%;
+  background-color: #005D48;
+background-color: rgba(0, 93, 72, 0.7);
+color: #ffffff;
+font-family: monospace;
+font-size: 15px;
 }
 
 .player,.download-link {
