--- a/style.css
+++ b/style.css
@@ -21,37 +21,66 @@
   unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF;
 }
 
+@-ms-viewport { width: device-width; }
+@-o-viewport { width: device-width; }
+@viewport { width: device-width; }
+
 html,
 body {
     width: 100%;
     height: 100%;
     margin:0;
     padding:0;
-    background-color: #ffffff;
-	color: #000000;
-    overflow: auto;
+    overflow: none;
     font-family: noto, ubuntu, Lucida Sans, Lucida Grande, Lucida Sans Unicode, HelveticaNeue-Light, HelveticaNeue, Helvetica, Arial, sans-serif, Segoe UI, 'Segoe UI Symbol', 'emoji';
 	text-align: center;
 	word-wrap: break-word;
 }
 
-body {
-background-image: url('logo.png');
+#main {
+    display: block;
+    clear: both;
+    float: left;
+    width: 100%;
+    height: 100%;
+	overflow: auto;
+    color: #ffffff;
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.9);
+    background-image: url(logo.png);
+    background-image: url(logo.svg), none;
+	background-image: url(logo.svg), linear-gradient(150deg, #1c688c 1%, rgba(0, 0, 0, 0.75) 10%, rgba(0, 0, 0, 0.5) 80%);
+    background-repeat: repeat;
+    background-position: center;
+    background-size: 100% 100%;
+    border-radius: 8px;
+	/*
+	background-image: url('logo.png');
 background-image: url('logo.svg'), none;
 background-repeat: repeat;
 background-position: center;
 background-size: cover;
-}
 
-#main {
-display: block;
-clear: both;
-float: left;
-width: 100%;
-min-height: 100%;
-height: auto;
-background-color: #ffffff;
-background-color: rgba(255, 255, 255, 0.8);
+    background: linear-gradient(40deg,#f36,#4432ba,#f36);
+    background-color: #a13290;
+    background-position: 94% 0;
+    background-size: 200% 200%;
+	*/
+/*
+
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    background: linear-gradient(40deg,#f36,#4432ba,#f36);
+    background-color: #a13290;
+    background-position: 94% 0;
+    background-size: 200% 200%;
+
+*/
 }
 
 @keyframes loading {
@@ -175,4 +204,89 @@ box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.12), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 8px 1
 background-color: #373F48;
 background-color: rgba(55, 63, 72, 0.9);
 box-shadow: inset 0 2px 0 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.12);
+}
+
+#embed-code {
+background-color: #000000;
+background-color: rgba(0, 0, 0, 0.8);
+color: #6cff35;
+width: 80%;
+width: calc(100% - 2px);
+border: solid 1px;
+padding: 0;
+margin: 0;
+display: block;
+}
+
+[hidden] {
+	display: none;
+	visibility: hidden;
+}
+
+/* Scrollbars */
+
+html, body {
+scrollbar-3dlight-color: #3A3A3A;
+scrollbar-arrow-color: #3A3A3A;
+scrollbar-base-color: #3A3A3A;
+scrollbar-darkshadow-color: #3A3A3A;
+scrollbar-face-color: #eeeeee;
+scrollbar-highlight-color: #3A3A3A;
+scrollbar-shadow-color: #3A3A3A;
+scrollbar-track-color: #1A1A3E;
+-ms-scrollbar-3dlight-color: #3A3A3A;
+-ms-scrollbar-arrow-color: #3A3A3A;
+-ms-scrollbar-base-color: #3A3A3A;
+-ms-scrollbar-darkshadow-color: #3A3A3A;
+-ms-scrollbar-face-color: #eeeeee;
+-ms-scrollbar-highlight-color: #3A3A3A;
+-ms-scrollbar-shadow-color: #3A3A3A;
+-ms-scrollbar-track-color: #1A1A3E;
+scrollbar-color: #3A3A3A #1A1A3E;
+scrollbar-width: thin;
+}
+
+@media only screen {
+::-webkit-scrollbar {
+display: block;
+width: 8px;
+height: 8px;
+background-color: #1A1A3E;
+background-size: 60px 60px;
+}
+
+::-webkit-scrollbar-thumb {
+background-color: #eeeeee;
+background-image: url(pattern-opacity.svg), linear-gradient(to left, rgba(0,0,0,0.5) 0, transparent 20%);
+background-position: 0 0;
+border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+background-color: #1A1A3E;
+background-image: url(pattern-opacity.svg), linear-gradient(to right, rgba(0,0,0,0.8) 0, transparent 50%);
+background-position: 0 0;
+}
+
+}
+
+/* Dark mode */
+
+@media (prefers-color-scheme: dark) { 
+
+
+
+}
+
+/* Prefers Reduced Motion */
+
+@media (prefers-reduced-motion) {
+
+* {
+animation-name: none;
+animation-duration: 0s;
+transition-property: none;
+transition-duration: 0s;
+}
+
 }
