--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ height: 50px;
     font-size: 15px;
 }
 
-#info {
+#torrent-info {
   width: 100%;
   background-color: #005D48;
 background-color: rgba(0, 93, 72, 0.7);
@@ -206,6 +206,25 @@ background-color: rgba(55, 63, 72, 0.9);
 box-shadow: inset 0 2px 0 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.12);
 }
 
+.button svg {
+	display: inline-block;
+	width: auto;
+	height: 1em;
+	color: #ffffff;
+	fill: #ffffff;
+}
+
+.button svg path {
+	color: #ffffff;
+	fill: #ffffff;
+}
+
+#controls {
+color: #ffffff;
+background-color: #000000;
+background-color: rgba(0, 0, 0, 0.5);
+}
+
 #embed-code {
 background-color: #000000;
 background-color: rgba(0, 0, 0, 0.8);
@@ -219,7 +238,7 @@ display: block;
 }
 
 [hidden] {
-	display: none;
+	opacity: 0;
 	visibility: hidden;
 }
 
